<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.diepnguyen.database.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/book"
        android:layout_above="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_your_email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="14dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in_btn"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_main"
        android:layout_below="@+id/login_btn"
        android:layout_alignLeft="@+id/login_btn"
        android:layout_alignStart="@+id/login_btn"
        android:layout_marginTop="20dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
